# reg

./: .gitignore  Cargo.toml  LICENSE  README.md  go.mod  go.sum
cmd/reg/: README.md  main.go
pkg/reg/: db.go  handler.go  reg.go  registry.go
src/: bootstrap.rs  database.rs  main.rs  registry.rs
