[package]
name = "reg"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "OCI distribution registry"

[dependencies]
anyhow = "1.0.97"
aws-config = { version = "1.6.1", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1.82.0", features = ["behavior-version-latest"] }
axum = "0.8.1"
futures = "0.3.31"
rusqlite = "0.34.0"
serde = { version = "1.0.219", features = ["serde_derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
